Made module-file structure, made reading bytes work and reading bytes from file and coverting to huffman tree then to array of key-value(byte(char), byte-representation in huff tree)

--- a/dune
+++ b/dune
@@ -1,1 +1,2 @@
-(executables (names read_file) (modules bs read_file))
+(executables (names main) (modules bs read_file occ_arr huff_tree main))
+(executable (name old_main))
