Added module structure and divided code on files. Added new function that converts a huff_tree to conversion array. Added unit tests. Added functions from conversion from char to compressed byte and vice versa. Added helping functions. Changed main file to test file reading, and unit_test file to test huff_tree implementation.

--- a/dune
+++ b/dune
@@ -1,3 +1,3 @@
-(executable
- (name main)
- (promote (until-clean)))
+(executables
+ (names unit_test main)
+ (modules occ_arr huff_tree read_file unit_test main))
