--- a/dune
+++ b/dune
@@ -1,3 +1,3 @@
 (executables
  (names unit_test main)
- (modules occ_arr huff_tree read_file unit_test main))
+ (modules bs occ_arr huff_tree read_file write_file unit_test main))
