Added interfaces for write file and huffman. Added huffman compressing of a file and decompressing and stats. Added full CLI functioning.

--- a/dune
+++ b/dune
@@ -1,3 +1,3 @@
 (executables
- (names unit_test main)
- (modules bs occ_arr huff_tree read_file write_file unit_test main))
+ (names unit_test main huff)
+ (modules bs occ_arr huff_tree read_file write_file huffman huff unit_test main))
