--- a/dune
+++ b/dune
@@ -1,3 +1,3 @@
 (executables
- (names unit_test main huff )
- (modules bs heap occ_arr huff_tree read_file write_file huffman huff unit_test main))
+ (names main huff unit_test)
+ (modules bs heap occ_arr huff_tree read_write_file huffman huff unit_test main))
